--- a/requirements.txt
+++ b/requirements.txt
@@ -1,66 +1,17 @@
-amqp==2.2.2
-backports.weakref==1.0rc1
-billiard==3.5.0.3
-bleach==1.5.0
-blinker==1.3
-boilerpipe==1.3.0.0
-boilerpipe-py3==1.2.0.0
-boilerpipe3==1.1
-certifi==2017.7.27.1
-charade==1.0.3
+certifi==2017.11.5
 chardet==3.0.4
 click==6.7
-cloud-init==0.7.9
-command-not-found==0.3
-configobj==5.0.6
-cryptography==1.2.3
-cycler==0.10.0
 Flask==0.12.2
 Flask-Cors==3.0.3
-h5py==2.7.0
-html5lib==0.9999999
+Flask-Scss==0.5
 idna==2.6
 itsdangerous==0.24
-Jinja2==2.9.6
-JPype1==0.6.2
-jsonpatch==1.10
+Jinja2==2.10
 jsonpickle==0.9.5
-jsonpointer==1.9
-Keras==2.0.8
-kombu==4.1.0
-language-selector==0.1
-Markdown==2.6.9
 MarkupSafe==1.0
-matplotlib==2.1.0
-numpy==1.13.3
-oauthlib==1.0.3
-olefile==0.44
-opencv-python==3.3.0.10
-Pillow==4.3.0
-prettytable==0.7.2
-protobuf==3.4.0
-pyasn1==0.1.9
-pycurl==7.43.0
-pygobject==3.20.0
-PyJWT==1.3.0
-pymongo==3.5.1
-pyparsing==2.2.0
-pyserial==3.0.1
-python-apt==1.1.0b1
-python-dateutil==2.6.1
-python-debian==0.1.27
-python-systemd==231
-pytz==2017.2
-PyYAML==3.12
+pymongo==3.6.0
+pyScss==1.3.5
 requests==2.18.4
-scipy==0.19.1
 six==1.11.0
-ssh-import-id==5.5
-tensorflow==1.3.0
-tensorflow-tensorboard==0.1.8
-ufw==0.35
-unattended-upgrades==0.1
 urllib3==1.22
-vine==1.1.4
-virtualenv==15.1.0
-Werkzeug==0.12.2
+Werkzeug==0.13
