--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ grocery/static/grocery_images
 
 static/assets/chestxray_images
 static/assets/material_images
+static/assets/images
 
 models/chatbot_swisscom
 models/chatbot_ubuntu
