--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@ models/chatbot_ubuntu
 .DS_Store
 config.py
 start_server.sh
+node_modules/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
