--- a/.gitignore
+++ b/.gitignore
@@ -109,3 +109,5 @@ ENV/
 # compiled css files
 static/ui-kit/custom/css
 static/ui-kit/custom/scss/**/*.css
+static/assets/.DS_Store
+static/assets/.DS_Store
