- Add entries for index and error HTML files - Add label tweet platform - Ignore all files in model except README - Config for label in config template - Server html link

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@ static/assets/chestxray_images
 static/assets/material_images
 static/assets/images
 
+models
+!models/README.md
+
 models/chatbot_swisscom
 models/chatbot_ubuntu
 .DS_Store
